2005-01-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/index.html: announce 2.5.8

2004-12-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/download/test.ly: update test.ly

2004-12-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/faq.html (href): add biabconverter

2004-12-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/faq.html (href): add nwc2ly
 
2004-11-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/switch/advantages.html (href): typo
	
2004-11-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/download/index.html: add planet ccrma release.

2004-11-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/doneet.html: update donations page.

2004-11-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/getting-started.html (Usage): Update to 2.4
	syntax.  Run indent-region, HTML fixes.  Avoid using `here' for
	link names.

2004-11-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/download/using.html (href): upgrade to 2.4

2004-10-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/switch/index.html (href): rephrase.

2004-10-30  Graham Percival  <gperlist@shaw.ca>

	* site/about/thanks.html: added bio.

2004-10-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/packaging.html (href): Update Cygwin description.

2004-10-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/devel/participating/editors.html: new page.

	* site/devel/participating/feature-page.html (href): new page
	

	* site/devel/participating/call-for-help.html: revise, split out
	tasks.
	
2004-10-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/switch/advantages.html (src): revise.

	* site/download/index.html: add SUSE 2.0, 2.2

	* scripts/format-page.py: restrict eval with {}. 

	* site/about/automated-engraving/typography-features.html: add
	ledger lines example.

	* site/images/computer-totaal.jpeg (Module): new file.

	* site/about/thanks.html (Module): mention devel team.

	* site/images/sarabande.png (Module): 2.3 version.
