@@ -1,3 +1,10 @@
+2005-01-22  Graham Percival  <gperlist@shaw.ca>
+
+	* site/devel/participating/standards.html: fix typo.
+
+	* site/devel/participating/index.html: added info about contributing
+	to documentation.
+
 2005-01-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* site/index.html: announce 2.5.8
